# ComfyAPI

./: .gitignore  00_new.ps1  01_result.ps1  README.md  app_api.bat  app_tgbot.bat  pyproject.toml
app/: api.py  comfy.py  main.py  service.py  telegram.py  telegram_api.py
prompt/: safety.md  system.md
tests/: test_api.py  test_comfy.py  test_service.py  test_telegram.py  test_telegram_api.py
workflows/: generation.json  image_to_text.json  text_to_image.json
