[project]
name = "comfy-instruction-api"
version = "2026.0724.0"
description = "复用现有 ComfyUI 队列的文生图与图生文 API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116,<1",
    "httpx>=0.28,<1",
    "uvicorn>=0.35,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.4,<10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
